FixedDurationScenario